--- a/EmployerFiles/EmployerFiles/EmployerFiles.vcxproj.filters
+++ b/EmployerFiles/EmployerFiles/EmployerFiles.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="employee_files.cpp">
+    <ClCompile Include="employer_files.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
