--- a/ENGCONST/ENGCONST/ENGCONST.vcxproj
+++ b/ENGCONST/ENGCONST/ENGCONST.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{9721045b-2a92-49e9-9a1d-fd3421726949}</ProjectGuid>
-    <RootNamespace>CONSTFU</RootNamespace>
+    <ProjectGuid>{5af2d61f-878e-494c-9076-86af7e354516}</ProjectGuid>
+    <RootNamespace>ENGCONST</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="constfu.cpp" />
+    <ClCompile Include="engConst.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
