new files 13.1 (verulong.cpp)

--- a/VERYLONG/VERYLONG/VERYLONG.vcxproj
+++ b/VERYLONG/VERYLONG/VERYLONG.vcxproj
@@ -141,6 +141,9 @@
   <ItemGroup>
     <ClInclude Include="verulong.h" />
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="verulong.cpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
