--- a/VERYLONG/VERYLONG/VERYLONG.vcxproj.filters
+++ b/VERYLONG/VERYLONG/VERYLONG.vcxproj.filters
@@ -19,4 +19,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="verulong.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+  </ItemGroup>
 </Project>
