--- a/VERYLONG/VERYLONG/VERYLONG.vcxproj.filters
+++ b/VERYLONG/VERYLONG/VERYLONG.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClCompile Include="verulong.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="vl_app.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
