new files 13.2 (elev.cpp (1))

--- a/EVEL/EVEL/EVEL.vcxproj.filters
+++ b/EVEL/EVEL/EVEL.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClInclude Include="elev.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="msoftcon.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="elev.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
