--- a/EVEL/EVEL/EVEL.vcxproj
+++ b/EVEL/EVEL/EVEL.vcxproj
@@ -140,6 +140,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="elev.h" />
+    <ClInclude Include="msoftcon.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="elev.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
