--- a/LANDLORD/LANDLORD/LANDLORD.vcxproj.filters
+++ b/LANDLORD/LANDLORD/LANDLORD.vcxproj.filters
@@ -19,4 +19,12 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="lordApp.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="landlord.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+  </ItemGroup>
 </Project>
